added error checking for workspaces with no channels, implemented createDM function on backend, created more users and channels in database
